tests/ui/repeated_setters_with_the_same_name_for_optionals.stderr
error[E0308]: mismatched types
 --> tests/ui/repeated_setters_with_the_same_name_for_optionals.rs:8:55
  |
8 |     let my_struct = MyStruct::builder().optional_args(vec![]).build();
  |                                                       ^^^^^^ expected struct `String`, found struct `Vec`
  |
  = note: expected struct `String`
             found struct `Vec<_>`
  = note: this error originates in the macro `vec` (in Nightly builds, run with -Z macro-backtrace for more info)
